logs/Slang/generated/keywords/5.6.2--keyword_if.sv.log
name: keyword_if
description: The 'if' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_if.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_if.sv:8:8: error: expected declarator
    bit if;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_if.sv:8:11: error: expected expression
    bit if;
          ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_if.sv:8:11: error: expected '('
    bit if;
          ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_if.sv:8:11: error: expected ')'
    bit if;
          ^
